--- a/MediMove/MediMove/Client/Pages/Admin/AdminCreateAccount.razor
+++ b/MediMove/MediMove/Client/Pages/Admin/AdminCreateAccount.razor
@@ -195,7 +195,7 @@ else if (selectedUserType.Equals(AccountType.Dispatcher.ToString()))
 }
 
 @code {
-    private string selectedUserType = "UserType";
+    private string selectedUserType = "Please select user type";
     private StandardResponse? statusCode = null;
     private ErrorResponse? errorResponse = null;
     private RegisterAdminRequest adminModel = new();
