--- a/MediMove/MediMove/Client/Pages/Admin/AdminPatientsReport.razor
+++ b/MediMove/MediMove/Client/Pages/Admin/AdminPatientsReport.razor
@@ -167,10 +167,12 @@
 
     private async void FetchData()
     {
+        isFetched = false;
         GetAllPatientsResponse temp = new(new Dictionary<int, PatientDTO>());
 
         popup.ShowErrorsOrAssign(await _patientService.GetPatients(), ref temp);
         var det = temp.Patients.Where(p => p.Key == selectedPatient[0].Id).Select(p => p.Value).First();
+        PatientDetails.Clear();
         PatientDetails.Add(det);
         isFetched = true;
         StateHasChanged();
