--- a/MediMove/MediMove/Client/Pages/Paramedic/ParamedicMain.razor
+++ b/MediMove/MediMove/Client/Pages/Paramedic/ParamedicMain.razor
@@ -1,62 +1,16 @@
-﻿@page "/paramedic/transports"
-@using MediMove.Client.Services;
-@using MediMove.Shared.Models.DTOs;
-@inject TransportService _transportService
+﻿@page "/paramedic/"
 
-<Popup @ref="popup" />
-
-<div class="container-fluid">
-    <RadzenDatePicker @bind-Value=@value Inline="true" Change="Change" />
-</div>
-
-<RadzenDataList WrapItems="true" Data="@transports" TItem="GetTransportsByParamedicAndDateRangeResponse.TransportInfo">
-    <Template Context="transport">
-        <RadzenCard Class="rz-my-12 rz-mx-auto" Style="max-width: 250px">
-           
-                
-                    <div>Patient: @transport.PatientFirstName @transport.PatientLastName</div>
-                    <div>PhoneNumber: @transport.PatientPhoneNumber</div>
-                    <br />
-                    <div>Destination: @transport.Destination</div>
-                    <div>Time: @transport.StartTime</div>
-                    <br />
-                    <div>
-                        Start Location: @transport.StartLocation
-                        @if (transport.ReturnLocation != null) {
-                            <div>Return location: @transport.ReturnLocation</div>
-                        }
-
-                    </div>
-                    <br />
-                    <div>Position: @transport.PatientPosition</div>
-                    <div>Weight: @transport.PatientWeight</div>
-                    <br />
-                    <div>Financing: @transport.Financing</div>
-
-                    
-                    
-                
-           
-
-        </RadzenCard>
-    </Template>
-</RadzenDataList>
+<div class="container-fluid centered-text"><h1>Welcome back!</h1></div>
 
 
-
-@code {
-    private GetTransportsByParamedicAndDateRangeResponse.TransportInfo[] transports;
-    DateTime? value = DateTime.Now;
-    private Popup popup = new();
-
-    protected override async Task OnInitializedAsync()
-    {
-        await Change();
-
+<style>
+    .centered-text {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
     }
-    private async Task Change() =>
-        popup.ShowErrorsOrAssign<GetTransportsByParamedicAndDateRangeResponse.TransportInfo[]>(await _transportService.GetTransportByDay(value.Value.Day, value.Value.Month, value.Value.Year), ref transports);
-
-    // Przenieśc logout na NavMenu na dół a imie i nazwisko zamiast MediMove w rogu
+</style>
+@code {
 
 }
